--- a/pages/about.html
+++ b/pages/about.html
@@ -109,8 +109,9 @@
                 Ya sea que seas un entusiasta experimentado o estés dando tus
                 primeros pasos en el mundo del arte corporal, te brindaremos un
                 trato profesional y respetuoso. Nuestro objetivo es superar tus
-                expectativas. ¡Te esperamos!
+                expectativas.
               </p>
+              <p>¡Te esperamos!</p>
             </div>
           </div>
         </div>
